--- a/webdoc/index.html
+++ b/webdoc/index.html
@@ -21,10 +21,10 @@
         </div>
       </div>
       <div class="column-right">
-        <!-- Optionally include an image here -->
         <!-- <img src="./pfp.jpg" alt="illustration" class="hero-image"> -->
       </div>
     </div>
+    <div class="visual-container"></div>
   </section>
 
   <div class="about">
